--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,41 @@
   <description>Automating ChecklistAssociate application</description>
   
   
+<properties>
+<maven.compiler.source>1.8</maven.compiler.source>
+ <maven.compiler.target>1.8</maven.compiler.target>
+</properties>
+<build>
+
+<testSourceDirectory>src</testSourceDirectory>
+<sourceDirectory>src</sourceDirectory>
+
+<resources>
+<resource>
+<directory>${basedir}</directory>
+<excludes>
+<exclude>target/</exclude>
+<exclude>Results/</exclude>
+</excludes>
+</resource>
+</resources>
+
+<plugins>
+<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.18.1</version>
+        <configuration>
+          <forkCount>0</forkCount>
+          <suiteXmlFiles>
+            <suiteXmlFile>./AssociatePortal_DailyCheckList/testng.xml</suiteXmlFile>
+          </suiteXmlFiles>
+        </configuration>
+      </plugin>
+</plugins>
+
+</build>
+
   <dependencies>
   <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
@@ -25,6 +60,54 @@
     <artifactId>extentreports</artifactId>
     <version>3.0.7</version>
 </dependency>
+
+<dependency>
+<groupId>org.apache.maven.surefire</groupId>
+<artifactId>surefire-api</artifactId>
+<version>2.4.3</version>
+</dependency>
+
+<dependency>
+<groupId>org.testng</groupId>
+<artifactId>testng</artifactId>
+<version>6.11</version>
+<scope>compile</scope>
+</dependency>
+<dependency>
+<groupId>org.apache.poi</groupId>
+<artifactId>poi</artifactId>
+<version>3.16-beta2</version>
+</dependency>
+
+
+<dependency>
+<groupId>org.apache.poi</groupId>
+<artifactId>poi-ooxml</artifactId>
+<version>3.9</version>
+</dependency>
+<dependency>
+<groupId>org.apache.poi</groupId>
+<artifactId>poi-ooxml-schemas</artifactId>
+<version>3.9</version>
+</dependency>
+<dependency>
+<groupId>org.apache.poi</groupId>
+<artifactId>poi-scratchpad</artifactId>
+<version>3.9</version>
+</dependency>
+<dependency>
+<groupId>org.apache.poi</groupId>
+<artifactId>ooxml-schemas</artifactId>
+<version>1.1</version>
+</dependency>
+
+<dependency>
+<groupId>org.apache.poi</groupId>
+<artifactId>openxml4j</artifactId>
+<version>1.0-beta</version>
+</dependency>
+
+
 	
 	
     
