--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <configuration>
           <forkCount>0</forkCount>
           <suiteXmlFiles>
-            <suiteXmlFile>./AssociatePortal_DailyCheckList/testng.xml</suiteXmlFile>
+          <suiteXmlFile>src/main/resources/testng.xml</suiteXmlFile> 
           </suiteXmlFiles>
         </configuration>
       </plugin>
@@ -42,6 +42,12 @@
 </build>
 
   <dependencies>
+  <dependency>
+<groupId>org.apache.maven.surefire</groupId>
+<artifactId>surefire-api</artifactId>
+<version>2.4.3</version>
+</dependency>
+  
   <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
