--- a/src/main/resources/com.clopay.automationtesting/repo/config.properties
+++ b/src/main/resources/com.clopay.automationtesting/repo/config.properties
@@ -1,4 +1,4 @@
 siteUrl = https://associateportal.clopay.com/
-//browser = chrome
+browser = chrome
 //browser = firefox
-browser  = ie
+//browser  = ie
