--- a/.classpath
+++ b/.classpath
@@ -6,11 +6,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
@@ -28,11 +23,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="D:/Selenium/selenium-java-3.4.0/client-combined-3.4.0-nodeps.jar"/>
 	<classpathentry kind="lib" path="D:/Selenium/selenium-java-3.4.0/lib/cglib-nodep-3.2.4.jar"/>
 	<classpathentry kind="lib" path="D:/Selenium/selenium-java-3.4.0/lib/commons-codec-1.10.jar"/>
@@ -81,5 +71,10 @@
 	<classpathentry kind="lib" path="D:/Selenium/extentreports-java-3.0.5/lib/mongodb-driver-core-3.3.0.jar"/>
 	<classpathentry kind="lib" path="D:/Selenium/extentreports-java-3.0.5/lib/testng-6.9.10.jar"/>
 	<classpathentry kind="lib" path="D:/Selenium/ashot-1.5.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
